# FullStack-Web-Development-with-Python

./: .gitignore  README.md  pyproject.toml
Chapter_02/: app.py
Chapter_03/: jinja2_ex01.py  jinja2_ex02.py  jinja2_ex03.py  persons.html  request_example.py  simple_client.py  simple_server.py  urllib_example.py
Chapter_03/HTTP_Server/: main.py
Chapter_04/: ex19.py  ex20.py  ex21.py  ex22.py  ex23.py  ex24_server.py  ex25_client.py  ex26.py
Chapter_05/: core_example.py  loading_example.py  relations_example.py  session_example.py
Chapter_05/PEP249/: connect.py  create_table.py  seed.py  select.py  update.py
Chapter_05/Session_select_join_example/: example.db  execute_example.py  main.py  models.py  seed.py
Chapter_06/: async_example.py  async_transaction_example.py  event_example.py  event_example2.py  sync_transaction_example.py  validation_example.py
Chapter_06/alembic_example/: connect.py  main.py  models.py  mynotes.db  seeds.py
Chapter_07/: example_exception.py  example_middleware.py  main.py  pydantic_example.py
Chapter_07/HTTP_Server/: main.py
Chapter_07/example_sql/: db.py  main.py  main_with_schema.py
Chapter_07/example_upload/: index.html  main.py  simple.py
Chapter_09/fastapi_auth/: main.py
Chapter_09/jwt_example/: app.py  auth.py  db.py  sql_app.db
Chapter_09/refresh_example/: app.py  auth.py  db.py  sql_app.db
Chapter_10/: example_black_ip.py  example_cache.py  example_ratelimit.py  example_user_agent.py  example_white_ip.py
Chapter_10/fastapi_email/: main.py
Chapter_10/fastapi_role/: auth.py  database.py  main.py  models.py  (+1 more)
(+90 files in other folders)
