[tool.poetry]
name = "fullstack-web-development-with-python"
version = "0.1.0"
description = ""
authors = ["Yuriy Kuchma <krabatua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
flask = "^3.0.3"
aiofile = "^3.9.0"
aiopath = "^0.7.7"
aioshutil = "^1.5"
aiohttp = "^3.10.10"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
alembic = "^1.13.3"
fastapi = "^0.115.2"
pydantic = {extras = ["email"], version = "^2.9.2"}
psycopg2 = "^2.9.10"
uvicorn = "^0.32.0"
python-multipart = "^0.0.12"
asyncpg = "^0.29.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
slowapi = "^0.1.9"
redis = "^5.1.1"
fastapi-mail = "^1.4.1"
cloudinary = "^1.41.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
